Add Data Accent Support: UTF-8 is forced
JSon file can now have letters with accent.